--- a/docs/team/weomucat.adoc
+++ b/docs/team/weomucat.adoc
@@ -241,6 +241,40 @@ To understand how the FSM works, study the activity diagram below:
 .Activity diagram of CommandParser
 image::CommandParserActivityDiagram.png[CommandParser, 300]
 
+===== Design Considerations
+
+[%header, cols="1h, 2a, 2a"]
+|===
+|
+| Option 1
+| Option 2
+
+| What
+| Use `String.split()` to break up command input into tokens.
+| Implement a FSM to break up command input into tokens.
+
+| Difficulty
+| Easy
+| Moderate
+
+| How
+| Split the command input by whitespaces, into words. The first word will be the *command keyword*.
+All subsequent words will have to be joined into *command phrases*.
+| Create a `State` class, and design a state diagram to tokenize the command input into a *command keyword* and *command phrases*.
+
+| Evaluation
+| I did not choose this option because:
+
+Joining words into command phrases can become quite complex, especially when introducing quotation marks.
+
+Additionally, it is difficult for future developers to maintain and extend logic like this.
+| *I chose this option because:*
+
+A state machine is easy to understand and configure.
+
+A state machine can tokenize complex command inputs, allowing future developers to parse advanced command inputs.
+|===
+
 === 3.3.4 CommandBuilder
 
 A `CommandBuilder` is defined to be able to accept an arbitrary amount of command phrases, and eventually create a `Command` using those phrases.
@@ -259,3 +293,36 @@ To understand how `CommandBuilder` works, study the activity diagram below:
 
 .Activity diagram of CommandBuilder
 image::CommandBuilderActivityDiagram.png[CommandBuilder, 300]
+
+===== Design Considerations
+
+[%header, cols="1h, 2a, 2a"]
+|===
+|
+| Option 1
+| Option 2
+
+| What
+| Each `Command` is created by parsing user input using it's own `Parser`.
+| Each `Command` is defined by a `CommandBuilder`, and created by a `CommandParser`.
+
+| Difficulty
+| Easy
+| Moderate
+
+| How
+| Implement a utility class which can parse user input into arguments. Use this class in each command parser.
+| Implement `CommandBuilder` which can build a `Command` with any number of arguments. Commands provide what arguments they require.
+
+| Evaluation
+| I did not choose this option because:
+
+Each command parser will need to implement logic to use the utility class, handle argument checking and parsing errors.
+
+It is difficult for future developers to create, extend and test `Commands`.
+| *I chose this option because:*
+
+Each `Command` does not require any logic, only arguments are required to be defined.
+
+Since all logic is in `CommandBuilder`, it is simple for developers to test.
+|===
