--- a/docs/team/jeunhoe.adoc
+++ b/docs/team/jeunhoe.adoc
@@ -30,32 +30,33 @@ Note the following symbols and formatting used in this document:
 
 | `[green]#TrainingManager#` | Green text with grey highlight indicates a component, class or object in the architecture of the application.
 
-| NOTE:: | This symbol indicates important information.
+| NOTE: | This symbol indicates important information.
 
 |===
 
 == Summary of contributions
-This section summarizes my contribution to the project’s code, documentation and other helpful contributions to the team project.
+This section contains a summary of my contributions to the project. This includes code, documentation and other helpful
+contributions to the team project.
 
 *Enhancement added:* I added the ability to add and delete training information.
 
 * What it does:
-** The `training` command adds training information to Athletick. Users store the date of training and
+** The `training` command adds training information to *Athletick*. Users store the date of training and
 players attended, allowing coaches to view, edit and delete past training data.
 
 * Justification:
 ** Coaches keep records of past trainings so they can use the information to manage their team.
-Allowing coaches to store training dates allows them to monitor their training schedule and plan for future training
+Allowing coaches to store training dates helps them to monitor their training schedule and plan for future training
 programs. We also allow storage of attendance information as a coach would want to know attendance for that training
 session.
 
 * Highlights:
-** Classes in the training feature were designed to function as a standalone unit, and do not rely on any other
+** Classes in the training feature were designed to function as a standalone unit and do not rely on any other
 components. This allows for easy extension of the feature to cater to different users. We have plans to extend the
 training feature to include more information, like type of training (e.g. gym training, sprints training) and athlete
 performance.
 
-** There are 2 variations of the training command. This allows users to indicate attendance of a training
+** There are 2 variations of the `training` command. This allows users to indicate attendance of a training
 by listing members present, or by members absent. We understand that keying player attendance can be very tedious for
 big teams. Giving the option to coaches to mark attendance by entering players absent will reduce the amount of
 typing which will save time.
@@ -63,14 +64,13 @@ typing which will save time.
 *Enhancement added:* I added the ability to monitor an athlete’s attendance rate.
 
 * What it does:
-** The attendance, select, view attendance and calendar commands allow a user to track their team’s
-attendance.
+** The `attendance`, `select`, `view attendance` and `calendar` commands allow a user to track their team’s attendance.
 
 * Justification:
 ** Coaches are concerned about their team’s overall attendance rate as it is a good indicator an
 athlete’s commitment and how prepared an athlete is for a competition. Providing an automatic attendance tracker
-removes the need for manual calculation as it can be tedious for coaches especially if there have been many training
-sessions.
+removes the need for manual calculation as it can be tedious for coaches, especially if he has to go through many
+training sessions.
 
 * Highlight:
 ** Attendance of a particular training is used in the calendar command and attendance rate is used in the
@@ -85,7 +85,8 @@ https://github.com/jeunhoe/main[(GitHub repository)]
 
 * Project management:
 
-** Managed release version 1.3 of Athletick on GitHub. https://github.com/AY1920S1-CS2103T-T12-3/main/releases/tag/v1.3[(v1.3)]
+** Managed release version 1.3 of *Athletick* on GitHub.
+https://github.com/AY1920S1-CS2103T-T12-3/main/releases/tag/v1.3[(v1.3)]
 
 ** Performed manual testing of application to detect bugs that were not covered by test classes.
 
@@ -106,6 +107,9 @@ https://github.com/AY1920S1-CS2103T-T12-3/main/pull/194[#194])
 https://github.com/AY1920S1-CS2103T-T12-3/main/pull/194[#194])
 
 * Documentation:
+
+** Created the general framework for the Developer Guide.
+(Pull request https://github.com/AY1920S1-CS2103T-T12-3/main/pull/19[#19])
 
 ** Added documentation for the `training`, `attendance` and `view attendance` commands in the User Guide.
 (Pull requests
@@ -139,13 +143,21 @@ https://github.com/AY1920S1-CS2103T-T12-3/main/pull/187[#187])
 
 
 == Contributions to the user guide
-This section presents my contributions to the user guide for the training and attendance features. They showcase my
+This section displays my contributions to the user guide for the training and attendance features. They showcase my
 ability to write documentation targeting end-users of our application.
+
+{Start of extract from User Guide}
 
 include::../UserGuide.adoc[tag=training]
 
+{End of extract from User Guide}
+
 == Contributions to the developer guide
-This section presents my contributions to the developer guide for the training feature. They showcase my ability to
-write technical documentation to developers and the technical depth of my contributions to the project.
+This section displays my contributions to the developer guide for the training feature. They showcase my ability to
+write technical documentation to developers, as well as the technical depth of my contributions to the project.
+
+{Start of extract from Developer Guide}
 
 include::../DeveloperGuide.adoc[tag=training]
+
+{End of extract from Developer Guide}
