--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -390,7 +390,7 @@ Special commands to take note of: +
 [TIP]
 For `FROM_ONLINE` and `HAS_WATCHED`, only `yes`, `true`, `no` and `false` would be accepted. +
 ====
-{sp} +
+
 ====
 Do take note of the following expected command outputs:
 
@@ -401,21 +401,21 @@ e.g. "search n/Avengers t/movie t/tv" will be interpreted as "search n/Avengers 
 * Space between prefix and slash is not acceptable. e.g. "n /Avengers" will throw an error.
 * Space after prefix is acceptable. e.g. "n/   Avengers" will be interpreted as "n/Avengers".
 ====
-{sp} +
+
 ====
 [NOTE]
 The search is case insensitive. e.g "avengers" will match "Avengers". +
 The order of the keywords matter. e.g. "Chris Evans" will not match "Evans Chris". +
 Not only full words will be matched. e.g. "Joke" will also match with "Joker".
 ====
-
+{sp} +
 *Example Usage:* +
 You may want to search for movies named "Avengers" and also movies with an actor called "Tom".
 As shown below, assume that your watchlist only has a movie "Avengers: Endgame" that you have watched.
 
 .Current *Watched list* with a movie "Avengers: Endgame"
 image::watchedPageWithAvengerEndgame.png[width="790"]
-
+{sp} +
 [start=1]
 1. Navigate to the *Search page* by one of the following ways: +
 * clicking on the *search* tab
@@ -431,17 +431,16 @@ After you have entered the command, you will be led to the *Search page* as show
 .User Interface of the search page
 image::emptySearchPage.png[width="790"]
 
-
 [TIP]
 You may skip Step 1 as you will be automatically be navigated to the *Search page* when you key in any valid `search`
-command, such as the one in Step 2.
+command, such as the one in Step 2 below.
 {sp} +
 [start=2]
 2. Enters `search n/Avengers a/Tom t/movie` into the command box in the search tab as shown below.
 
 .Entering of the `search` command to search for shows
 image::searchAvengerUserInput.png[width="790"]
-
+{sp} +
 Press kbd:[enter] after entering the information shown above and wait for the information to load.
 
 .Loading Screen of the *Search page*
@@ -451,24 +450,24 @@ The loading page as shown above will appear while EzWatchlist searches for your 
 
 [TIP]
 You can go to the other pages in the mean time. Do allow some time for the search to load.
-
+{sp} +
 [start=3]
 3. Search page shows the list of shows based on `search n/Avengers a/Tom t/movie`.
-
+{sp} +
 *Scenario A: You are offline* +
 Only movies from the watchlist or offline database with the movie name "Avengers" or actor name "Tom" will be shown,
 as seen in the figure below.
 
 .*Search Page* showing the search results when offline
 image::searchPageSearchedForAvengersWhenOffline.png[width="790"]
-
+{sp} +
 *Scenario B: You are online* +
 Only movies from the online database with the movie name "Avengers" or actor name "Tom" will be shown, as seen in the
 figure below.
 
 .*Search Page* showing the search results when online
 image::searchPageSearchedForAvengersWhenOnline.png[width="790"]
-
+{sp} +
 Examples:
 
 * By name:
